--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,26 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 1rem 0 1rem 0;
+}
+
+h1 {
+  font-size: 8rem;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+h3, h4, h5 {
+  font-size: 2rem;
+}
+
 * {
   box-sizing: border-box;
 }
