--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   min-height: 100vh;
+  min-width: none;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -9,10 +10,11 @@
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  width: 85%;
+  height: 100%;
+  padding: 2rem 0;
 }
